@@ -23,7 +23,7 @@
 
 /*
  * @test
- * @summary Compile Classfile API snippets
+ * @summary Compile ClassFile API snippets
  * @run junit SnippetsTest
  */
 
@@ -40,8 +40,8 @@ public class SnippetsTest {
 
     @ParameterizedTest
     @ValueSource(strings = {
-        "src/java.base/share/classes/jdk/internal/classfile/snippet-files/PackageSnippets.java",
-        "src/java.base/share/classes/jdk/internal/classfile/components/snippet-files/PackageSnippets.java"})
+        "src/java.base/share/classes/java/lang/classfile/snippet-files/PackageSnippets.java",
+        "src/java.base/share/classes/java/lang/classfile/components/snippet-files/PackageSnippets.java"})
     void testSnippet(String source) throws Exception {
         var p = Paths.get(System.getProperty("test.src", ".")).toAbsolutePath();
         while ((p = p.getParent()) != null) {
@@ -53,11 +53,8 @@ public class SnippetsTest {
                     fileManager.setLocation(StandardLocation.CLASS_OUTPUT,
                             List.of(Paths.get(System.getProperty("test.classes", ".")).toFile()));
                     var task = compiler.getTask(null, fileManager, null, List.of(
-                            "--add-exports", "java.base/jdk.internal.classfile=ALL-UNNAMED",
-                            "--add-exports", "java.base/jdk.internal.classfile.attribute=ALL-UNNAMED",
-                            "--add-exports", "java.base/jdk.internal.classfile.components=ALL-UNNAMED",
-                            "--add-exports", "java.base/jdk.internal.classfile.constantpool=ALL-UNNAMED",
-                            "--add-exports", "java.base/jdk.internal.classfile.instruction=ALL-UNNAMED"),
+                            "--enable-preview",
+                            "--source", String.valueOf(Runtime.version().feature())),
                             null, compilationUnits);
                     if (task.call()) return;
                     throw new RuntimeException("Error compiling " + source);
